[Task] Make ready for TYPO3 10

--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,48 @@
 {
-    "name": "jweiland/statictagcloud",
-    "type": "typo3-cms-extension",
-    "description": "Create your own static tagcloud and define on your own which word has priority",
-    "license": "GPL-2.0-or-later",
-    "keywords": ["typo3", "TYPO3 CMS", "statictagcloud", "static", "tag", "cloud"],
-    "homepage": "http://www.jweiland.net",
-    "authors": [
-      {
-        "name": "Stefan Froemken",
-        "email": "sfroemken@jweiland.net",
-        "role": "Lead Developer"
-      }
-    ],
-    "support": {
-      "email": "projects@jweiland.net",
-      "issues": "https://github.com/jweiland-net/statictagcloud/issues",
-      "source": "https://github.com/jweiland-net/statictagcloud"
-    },
-    "require": {
-      "typo3/cms-core": "~8.7"
-    },
-    "require-dev": {
-      "phpunit/phpunit": "~4.8.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "JWeiland\\Statictagcloud\\": "Classes"
-        }
-    }
+	"name": "jweiland/statictagcloud",
+	"type": "typo3-cms-extension",
+	"description": "Create your own static tagcloud and define on your own which word has priority",
+	"license": "GPL-2.0-or-later",
+	"keywords": ["typo3", "TYPO3 CMS", "statictagcloud", "static", "tag", "cloud"],
+	"homepage": "http://www.jweiland.net",
+	"authors": [
+		{
+			"name": "Stefan Froemken",
+			"email": "sfroemken@jweiland.net",
+			"role": "Lead Developer"
+		}
+	],
+	"support": {
+		"email": "projects@jweiland.net",
+		"issues": "https://github.com/jweiland-net/statictagcloud/issues",
+		"source": "https://github.com/jweiland-net/statictagcloud"
+	},
+	"require": {
+		"typo3/cms-core": "^9.5.17 || ^10.4.2"
+	},
+	"require-dev": {
+		"friendsofphp/php-cs-fixer": "^2.0",
+		"nimut/testing-framework": "^5.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"JWeiland\\Statictagcloud\\": "Classes"
+		}
+	},
+	"config": {
+		"vendor-dir": ".build/vendor"
+	},
+	"extra": {
+		"typo3/cms": {
+			"extension-key": "statictagcloud",
+			"app-dir": ".build",
+			"web-dir": ".build/public"
+		}
+	},
+	"scripts": {
+		"php:fix": ".build/vendor/bin/php-cs-fixer --config=Build/.php_cs.php fix Classes Tests",
+		"ci:php:lint": "find *.php Classes Configuration Tests -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l",
+		"ci:php:fixer": ".build/vendor/bin/php-cs-fixer --config=Build/.php_cs.php fix --dry-run -v --show-progress=dots --diff-format=udiff Classes Tests",
+		"ci:tests:unit": ".build/vendor/bin/phpunit -c .build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit"
+	}
 }
