--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,27 @@
 # Adapted from https://github.com/TYPO3GmbH/blog/blob/master/.github/workflows/ci.yml
 name: CI
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
-
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         typo3: [^9.5, ^10.4]
-        php: ['7.2', '7.3', '7.4']
+        php: ['7.1', '7.2', '7.3', '7.4']
         os: [ubuntu-latest]
         exclude:
+          - typo3: ^9.5
+            php: '7.0'
+          - typo3: ^9.5
+            php: '7.1'
           - typo3: ^10.4
             php: '7.0'
           - typo3: ^10.4
             php: '7.1'
 
     steps:
-
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -27,6 +29,7 @@ jobs:
         run: |
           sudo update-alternatives --set php /usr/bin/php${{ matrix.php }}
           php -v
+
       - name: Validate composer.json and composer.lock
         run: composer validate
 
@@ -34,6 +37,7 @@ jobs:
         run: |
           composer require typo3/cms-core:${{ matrix.typo3 }} --no-progress
           git checkout composer.json
+
       - name: php-cs-fixer
         run: composer ci:php:fixer
 
@@ -41,4 +45,5 @@ jobs:
         run: composer ci:php:lint
 
       - name: Unit Tests
-        run: composer ci:tests:unit
+        run: |
+          composer ci:tests:unit
