--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,30 +5,28 @@ on: [pull_request]
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
+
     strategy:
+      fail-fast: false
       matrix:
-        typo3: [^9.5, ^10.4]
-        php: ['7.1', '7.2', '7.3', '7.4']
-        os: [ubuntu-latest]
-        exclude:
-          - typo3: ^9.5
-            php: '7.0'
-          - typo3: ^9.5
-            php: '7.1'
-          - typo3: ^10.4
-            php: '7.0'
-          - typo3: ^10.4
-            php: '7.1'
+        typo3: [^10.4, ^11.5]
+        php: ['7.4']
+        include:
+          - typo3: ^11.5
+            php: '8.0'
+          - typo3: ^11.5
+            php: '8.1'
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up PHP Version ${{ matrix.php }}
-        run: |
-          sudo update-alternatives --set php /usr/bin/php${{ matrix.php }}
-          php -v
+      - name: Setup PHP ${{ matrix.php }}, with composer and extensions
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          extensions: mbstring, dom, zip
 
       - name: Validate composer.json and composer.lock
         run: composer validate
