--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"description": "Create your own static tagcloud and define on your own which word has priority",
 	"license": "GPL-2.0-or-later",
 	"keywords": ["typo3", "TYPO3 CMS", "statictagcloud", "static", "tag", "cloud"],
-	"homepage": "http://www.jweiland.net",
+	"homepage": "https://www.jweiland.net",
 	"authors": [
 		{
 			"name": "Stefan Froemken",
@@ -18,11 +18,13 @@
 		"source": "https://github.com/jweiland-net/statictagcloud"
 	},
 	"require": {
-		"typo3/cms-core": "^9.5.17 || ^10.4.2"
+		"typo3/cms-core": "^10.4.32 || ^11.5.16"
 	},
 	"require-dev": {
-		"friendsofphp/php-cs-fixer": "^2.0",
-		"nimut/testing-framework": "^5.0"
+		"roave/security-advisories": "dev-latest",
+		"friendsofphp/php-cs-fixer": "^3.0",
+		"nimut/testing-framework": "^6.0",
+		"phpunit/phpunit": "^9.5"
 	},
 	"autoload": {
 		"psr-4": {
@@ -30,7 +32,11 @@
 		}
 	},
 	"config": {
-		"vendor-dir": ".build/vendor"
+		"vendor-dir": ".build/vendor",
+		"allow-plugins": {
+			"typo3/class-alias-loader": true,
+			"typo3/cms-composer-installers": true
+		}
 	},
 	"extra": {
 		"typo3/cms": {
