--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
 		"nimut/testing-framework": "^6.0",
 		"phpunit/phpunit": "^9.5"
 	},
+	"replace": {
+		"typo3-ter/statictagcloud": "self.version"
+	},
 	"autoload": {
 		"psr-4": {
 			"JWeiland\\Statictagcloud\\": "Classes"
