--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,47 +1,45 @@
-# Adapted from https://github.com/TYPO3GmbH/blog/blob/master/.github/workflows/ci.yml
-name: CI
+name: Tests
 
-on: [pull_request]
+on:
+  push:
+  pull_request:
 
 jobs:
-  build:
+  testing:
+    name: Testing
+
     runs-on: ubuntu-latest
 
     strategy:
+      # This prevents cancellation of matrix job runs, if one or more already failed
+      # and let the remaining matrix jobs be executed anyway.
       fail-fast: false
+
       matrix:
-        typo3: [^10.4, ^11.5]
-        php: ['7.4']
-        include:
-          - typo3: ^11.5
-            php: '8.0'
-          - typo3: ^11.5
-            php: '8.1'
+        php:
+          - '8.2'
+          - '8.3'
+          - '8.4'
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: 'Checkout'
+        uses: actions/checkout@v4
 
-      - name: Setup PHP ${{ matrix.php }}, with composer and extensions
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }}
-          extensions: mbstring, dom, zip
+      - name: 'Lint PHP'
+        run: Build/Scripts/runTests.sh -b podman -p ${{ matrix.php }} -s lint
 
-      - name: Validate composer.json and composer.lock
-        run: composer validate
+      - name: 'Install testing system'
+        run: Build/Scripts/runTests.sh -b podman -p ${{ matrix.php }} -s composerUpdate
 
-      - name: Install dependencies with typo3/cms-core:${{ matrix.typo3 }}
-        run: |
-          composer require typo3/cms-core:${{ matrix.typo3 }} --no-progress
-          git checkout composer.json
+      - name: 'Composer validate'
+        run: Build/Scripts/runTests.sh -b podman -p ${{ matrix.php }} -s composerValidate
 
-      - name: php-cs-fixer
-        run: composer ci:php:fixer
+      - name: 'Composer normalize'
+        run: Build/Scripts/runTests.sh -b podman -p ${{ matrix.php }} -s composerNormalize -n
 
-      - name: Lint PHP
-        run: composer ci:php:lint
+      - name: 'CGL'
+        if: ${{ matrix.php <= '8.3' }}
+        run: Build/Scripts/runTests.sh -b podman -n -p ${{ matrix.php }} -s cgl
 
-      - name: Unit Tests
-        run: |
-          composer ci:tests:unit
+      - name: 'Execute unit tests'
+        run: Build/Scripts/runTests.sh -p ${{ matrix.php }} -s unit
